--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,3 +102,12 @@ unbind Up
 unbind Down
 unbind Left
 unbind Right
+
+# tmux powerline configuration
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(/tmp/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(/tmp/tmux-powerline/powerline.sh right)"
