change bind window and add info repo tmux-powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,10 +25,15 @@ bind | split-window -h
 bind - split-window -v
 
 # vim / xmonad style bindings for pane movement
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+# bind -r h select-pane -L
+# bind -r j select-pane -D
+# bind -r k select-pane -U
+# bind -r l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # vim / xmonad style bindings for window movement
 bind -r C-h select-window -t :-
@@ -104,6 +109,7 @@ unbind Left
 unbind Right
 
 # tmux powerline configuration
+# git clone git@github.com:erikw/tmux-powerline.git /tmp/tmux-powerline
 set-option -g status on
 set-option -g status-interval 2
 set-option -g status-justify "centre"
