fixed to new version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,8 +90,16 @@ setw -g mode-keys vi
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+
+bind -Tcopy-mode-vi H send -X start-of-line
+bind -Tcopy-mode-vi L send -X end-of-line
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi c send -X copy-selection
+bind -Tcopy-mode-vi Escape send -X cancel
+
+# Copy via 'y' and into system clipboard
+bind-key -Tcopy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 
 # set up alias for turning on logging
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
